--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,9 +30,25 @@ services:
       - postgres
     networks:
       - dev_network
+  
+  minio:
+    image: minio/minio:latest
+    container_name: minio
+    ports:
+      - "9000:9000"   # API / Web
+      - "9001:9001"   # Console
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    command: server /data --console-address ":9001"
+    volumes:
+      - minio_data:/data
+    networks:
+      - dev_network
 
 volumes:
   postgres_data:
+  minio_data:
 
 networks:
   dev_network:
